--- a/settings/local.py.example
+++ b/settings/local.py.example
@@ -19,7 +19,7 @@ MANAGERS = ADMINS
 DATABASES = {
     'default': {
         'ENGINE': 'django.db.backends.sqlite3',
-        'NAME': os.path.join(VAR_ROOT, 'dev.db'),
+        'NAME': os.path.join(BASE_DIR, 'dev.db'),
     }
 }
 
